<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_github_auth"
            android:icon="@android:drawable/stat_sys_download"
            android:title="@string/github" />
        <item
            android:id="@+id/nav_maps"
            android:icon="@drawable/ic_menu_send"
            android:title="@string/maps" />
        <item
            android:id="@+id/nav_contacts"
            android:icon="@drawable/ic_menu_share"
            android:title="@string/contacts" />
        <item
            android:id="@+id/nav_info"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/info" />
        <item
            android:id="@+id/nav_sencor_and_camera"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/sensor_and_camera" />
    </group>

    <item android:title="@string/other">
        <menu>
            <item
                android:id="@+id/nav_logout"
                android:icon="@android:drawable/ic_input_delete"
                android:title="@string/logout" />
        </menu>
    </item>

</menu>
