<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Fragments.InfoFragment">

    <!-- TODO: Update blank fragment layout -->

    <TextView
        android:id="@+id/deviceModelTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/device_model_text_view"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/androidVersionTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/android_version_text_view"
        android:textSize="19sp" />

    <TextView
        android:id="@+id/RAMTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ram"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/IPAddressTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ip_address"
        android:textSize="18sp" />
</LinearLayout>